--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
     "babel-plugin-macros": "^3.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -19,9 +18,9 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "node-fetch": "2",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.16",
-    "react-router-dom": "^6.3.0",
+    "sequelize-cli": "^6.4.1",
     "spoonacular-api-library": "^1.0.5"
   }
 }
